--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,22 @@ coverage-badge = "^1.1.0"
 freezegun = "^1.2.1"
 pytest = "^7.1.2"
 pylint = "^2.13.8"
+mypy = "^0.950"
+
+[tool.mypy]
+disallow_any_generics = true
+disallow_subclassing_any = true
+disallow_untyped_calls = true
+disallow_untyped_defs = true
+disallow_incomplete_defs = true
+check_untyped_defs = true
+disallow_untyped_decorators = true
+no_implicit_optional = true
+warn_redundant_casts = true
+warn_unused_ignores = true
+warn_return_any = true
+implicit_reexport = false
+strict_equality = true
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
